--- a/builder.css
+++ b/builder.css
@@ -1,14 +1,38 @@
 /* red          pale lime   green       dark pale   beige
    FF4242       F4FAD2      D4EE5E      E1EDB9      F0F2EB */
-html, body {margin:0; padding:0; font-family:sans-serif; font-size:12pt; background:#333; height:100%;}
-.wrap {width:980px; padding:20px; margin:10px auto;}
+html, body {margin:0; padding:0; font-family:sans-serif; font-size:12pt; background:#fff; overflow:auto;}
+.wrap {width:980px; padding:0 20px 10px; margin:10px auto 10px;}
 
-h1 {color:#FF4242; margin:0; padding:0; font-size:20pt;}
-.section {background:#fff; padding:20px; border-radius:8px; box-shadow:0px 0px 8px #111; margin:0 0 10px; float:left; clear:both;}
+h1, h2 {color:#FF4242; margin:0 0 0px 10px; padding:0; font-size:53pt; font-family:monospace; letter-spacing:0.1em; font-weight:bold;
+text-shadow:1px 1px 0 #aa3037,
+1px 2px 0 #aa3037,
+2px 3px 0 #aa3037,
+3px 4px 0 #aa3037,
+4px 5px 0 #aa3037,
+5px 3px 5px #000;}
+h2 {position:relative; top:16px; margin-left:20px; z-index:9; color:#B4CE1E; font-size:24pt; letter-spacing:7px; text-transform:uppercase; font-weight:normal;
+text-shadow:1px 1px 0 #546E6E,
+1px 2px 0 #546E6E,
+2px 3px 0 #546E6E,
+3px 3px 3px #aaa;}
 
-.config {float:left; border-left:1px solid #F4FAD2; border-right:1px solid #E1EDB9; width:200px; padding:10px;}
+.section {background:#fff; padding:35px 20px 20px; border-radius:8px; margin:0 0 10px; overflow:auto; clear:both; position:relative;
+box-shadow:0px 1px 0 #999,
+1px 2px 0 #999,
+2px 3px 0 #999,
+3px 4px 0 #999,
+4px 5px 0 #999,
+5px 5px 16px #aaa;
+}
+
+.config {float:left; width:200px; padding:0 10px 10px;}
 
 #function {display:none; font-family:monospace; overflow-x:scroll; width:940px; font-size:10pt;}
+
+.options {border-left:13px solid #f6f6f6; overflow:auto; clear:both; padding:0 0 0 10px; margin:10px 0 0 1px;}
+.options .group {padding:2px 0; margin:4px 0 0; float:left; clear:both;}
+.group label {cursor:pointer; color:#666; padding:0 0 0 2px;}
+.group label:hover {color:#000;}
 
 .display {font-family:monospace;}
 .display .git, .display .hg, .display .svn {background:#000; padding:3px; color:#fff; font-size:}
