--- a/builder.css
+++ b/builder.css
@@ -17,13 +17,18 @@ text-shadow:1px 1px 0 #546E6E,
 3px 3px 3px #aaa;}
 
 .section {background:#fff; padding:35px 20px 20px; border-radius:8px; margin:0 0 10px; overflow:auto; clear:both; position:relative;
-box-shadow:0px 1px 0 #999,
-1px 2px 0 #999,
-2px 3px 0 #999,
-3px 4px 0 #999,
-4px 5px 0 #999,
+box-shadow:0px 1px 0 #bbb,
+1px 2px 0 #bbb,
+2px 3px 0 #bbb,
+3px 4px 0 #bbb,
+4px 5px 0 #bbb,
 5px 5px 16px #aaa;
 }
+
+ul.nav {padding:15px 25px 0; margin:0; overflow:auto;}
+ul.nav li {float:left; list-style:none; margin:0 20px 0 0;}
+ul.nav li a {color:#FF4242; text-decoration:underline;}
+ul.nav li a:hover {text-decoration:none;}
 
 .config {float:left; width:200px; padding:0 10px 10px;}
 
@@ -35,7 +40,8 @@ box-shadow:0px 1px 0 #999,
 .group label:hover {color:#000;}
 
 .display {font-family:monospace;}
-.display .git, .display .hg, .display .svn {background:#000; padding:3px; color:#fff; font-size:}
+.display label {color:#666; font-family:sans-serif; margin:10px 0 5px; display:block;}
+.display .git, .display .hg, .display .svn {background:#000; padding:3px; color:#fff;}
 
 .display .git-branch {color:#c7c323;}
 .display .svn-branch {color:#6cc2c6;}
