--- a/FunForms.css
+++ b/FunForms.css
@@ -15,3 +15,13 @@ background: -webkit-radial-gradient(circle, #feddd7, #fec3cd);
 background: -moz-radial-gradient(circle, #feddd7, #fec3cd);
 background: -ms-radial-gradient(circle, #feddd7, #fec3cd);
 box-shadow:1px 1px 2px #daaac3, inset 0 0 2px red; }
+
+input[type="text"] {border:1px solid #aaa; padding:4px; font-family:serif; font-size:12pt; color:#666; box-shadow:2px 2px 3px #ccc;
+background:-moz-linear-gradient(top, #e0e0e0 0%, #fff 40%); /* FF3.6+ */
+background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#ddd), color-stop(100%,#fff)); /* Chrome,Safari4+ */
+background:-webkit-linear-gradient(top, #ddd 10%,#fff 100%); /* Chrome10+,Safari5.1+ */
+background:-o-linear-gradient(top, #ddd 10%,#fff 100%); /* Opera11.10+ */
+background:-ms-linear-gradient(top, #ddd 10%,#fff 100%); /* IE10+ */
+filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddd', endColorstr='#fff',GradientType=0 ); /* IE6-9 */
+background:linear-gradient(top, #ddd 10%,#fff 100%); /* W3C */ }
+input[type="text"]:focus {border:1px solid #dd8888; color:#444; box-shadow:inset 0 0 2px #eed2d2, 2px 2px 4px #ffcccc;}
