--- a/builder.css
+++ b/builder.css
@@ -4,6 +4,7 @@
 /* Layout */
 html, body {margin:0; padding:0; font-family:sans-serif; font-size:12pt; background:#222; overflow:auto; }
 .wrap {width:980px; padding:0 20px 10px; margin:10px auto 10px;}
+a{color:#ae350e;}
 
 .section {background:#fff; padding:35px 20px 20px; border-radius:8px; margin:0 0 10px; overflow:auto; clear:both; position:relative;
 box-shadow:1px 1px 0 #bbb,
@@ -78,20 +79,15 @@ box-shadow:1px 1px 0 #ae351e,
 5px 5px 10px #111;
 }
 ul.nav li:last-child a {border-radius:0 20px 20px 0; padding-right:15px;}
-ul.nav li a {position:relative; top:2px; left:2px; letter-spacing:0.05em; float:left; list-style:none; margin:0 1px 0 0; background:#fff; display:block; padding:5px 20px 2px; border-bottom:3px solid #ddd;
+ul.nav li a {position:relative; top:2px; left:2px; letter-spacing:0.05em; float:left; list-style:none; margin:0 1px 0 0; background:#fff; display:block; padding:5px 20px 2px; border-bottom:3px solid #ddd; text-decoration:none;
 box-shadow:1px 1px 0 #ae350e,
 1px 2px 0 #ae350e;
+-webkit-transition:all 0.12s ease-out;
+-moz-transition:all 0.12s ease-out;
+-o-transition:all 0.12s ease-out;
+-ms-transition:all 0.12s ease-out;
+transition:all 0.12s ease-out;
 }
-
-ul.nav a {
-  -webkit-transition:all 0.12s ease-out;
-  -moz-transition:all 0.12s ease-out;
-  -o-transition:all 0.12s ease-out;
-  -ms-transition:all 0.12s ease-out;
-  transition:all 0.12s ease-out;
-}
-
-ul.nav li a {color:#ae350e; text-decoration:none;}
 ul.nav li a:hover {text-decoration:none; border:0 none; top:0; left:0; padding-bottom:5px;
 box-shadow:1px 1px 0 #ce553e,
 0px 0px 2px #444,
@@ -143,9 +139,9 @@ box-shadow:1px 1px 0 #ce553e,
 .group label {cursor:pointer; color:#444; padding:0 0 0 2px;}
 .group label:hover {color:#000;}
 
-.wtf {clear:both; margin:10px; border:3px solid #ddd; height:40px; padding:10px; font-size:10pt; box-shadow:inset 0 0 10px #eee; margin:0 0 20px;}
+.wtf {clear:both; margin:10px; border:3px solid #ddd; height:34px; padding:10px; font-size:10pt; box-shadow:inset 0 0 10px #eee; margin:0 0 20px;}
 .wtf label {display:block; font-style:italic; color:#aaa; display:none; font-size:11pt; margin:0 0 3px;}
-.wtf #placeholder {display:block; margin:12px auto 0; width:400px; color:#888; text-transform:uppercase;}
+.wtf #placeholder {display:block; margin:10px auto 0; width:400px; color:#888; text-transform:uppercase;}
 
 .ribbon {background:#000; overflow:hidden; position:absolute; left:-3em; top:2.5em; -moz-transform:rotate(-45deg); -webkit-transform:rotate(-45deg); box-shadow:0 0 10px #111; opacity:0.4;}
 .ribbon:hover {opacity:1.0;}
