--- a/FunForms.css
+++ b/FunForms.css
@@ -14,7 +14,7 @@ background: -webkit-gradient(radial, center center, 0, center center, 460, from(
 background: -webkit-radial-gradient(circle, #feddd7, #fec3cd);
 background: -moz-radial-gradient(circle, #feddd7, #fec3cd);
 background: -ms-radial-gradient(circle, #feddd7, #fec3cd);
-box-shadow:1px 1px 2px #daaac3, inset 0 0 2px red; }
+box-shadow:0 0 5px #FFA2A2, 1px 1px 2px #daaac3, inset 0 0 2px red; }
 
 input[type="text"] {border:1px solid #aaa; padding:4px; font-family:serif; font-size:12pt; color:#666; box-shadow:2px 2px 3px #ccc;
 background:-moz-linear-gradient(top, #e0e0e0 0%, #fff 40%); /* FF3.6+ */
@@ -25,3 +25,8 @@ background:-ms-linear-gradient(top, #ddd 10%,#fff 100%); /* IE10+ */
 filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddd', endColorstr='#fff',GradientType=0 ); /* IE6-9 */
 background:linear-gradient(top, #ddd 10%,#fff 100%); /* W3C */ }
 input[type="text"]:focus {border:1px solid #dd8888; color:#444; box-shadow:inset 0 0 2px #eed2d2, 2px 2px 4px #ffcccc;}
+
+.fun-picker {position:absolute; display:none; z-index:999999; background:#fff; border-radius:8px; box-shadow:2px 2px 10px #666;}
+.fun-picker ul {}
+.fun-picker ul li {float:left; display:block; padding:3px;}
+.fun-picker ul li:hover {cursor:pointer;}
