--- a/FunForms.css
+++ b/FunForms.css
@@ -1,32 +1,30 @@
 .fun-checkbox {display:inline-block; width:12px; height:12px; border:1px solid #9e9fa1; border-bottom:1px solid #888; border-top:1px solid #bbb; border-radius:3px; box-shadow:2px 2px 2px #ddd, inset 0 0 2px #686c77; cursor:pointer;
-background:-moz-linear-gradient(top, #bbc0ca 0%, #d2d5dc 100%); /* FF3.6+ */
-background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#bbc0ca), color-stop(100%,#d2d5dc)); /* Chrome,Safari4+ */
-background:-webkit-linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%); /* Chrome10+,Safari5.1+ */
-background:-o-linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%); /* Opera11.10+ */
-background:-ms-linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%); /* IE10+ */
-filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#bbc0ca', endColorstr='#d2d5dc',GradientType=0 ); /* IE6-9 */
-background:linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%); /* W3C */ }
+background:-moz-linear-gradient(top, #bbc0ca 0%, #d2d5dc 100%);
+background:-webkit-linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%);
+background:linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%);}
 
 .fun-checkbox.checked:after {content:'✓'; text-shadow:0 0 1px #fff; opacity:0.8; color:#aa3037; position:absolute; top:-4px; left:2px; cursor:pointer;}
 
 .fun-checkbox.checked {position:relative;
-background: -webkit-gradient(radial, center center, 0, center center, 460, from(#feddd7), to(#fec3cd));
 background: -webkit-radial-gradient(circle, #feddd7, #fec3cd);
 background: -moz-radial-gradient(circle, #feddd7, #fec3cd);
-background: -ms-radial-gradient(circle, #feddd7, #fec3cd);
 box-shadow:0 0 5px #FFA2A2, 1px 1px 2px #daaac3, inset 0 0 2px red; }
 
 input[type="text"] {border:1px solid #aaa; padding:4px; font-family:serif; font-size:12pt; color:#666; box-shadow:2px 2px 3px #ccc;
-background:-moz-linear-gradient(top, #e0e0e0 0%, #fff 40%); /* FF3.6+ */
-background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#ddd), color-stop(100%,#fff)); /* Chrome,Safari4+ */
-background:-webkit-linear-gradient(top, #ddd 10%,#fff 100%); /* Chrome10+,Safari5.1+ */
-background:-o-linear-gradient(top, #ddd 10%,#fff 100%); /* Opera11.10+ */
-background:-ms-linear-gradient(top, #ddd 10%,#fff 100%); /* IE10+ */
-filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddd', endColorstr='#fff',GradientType=0 ); /* IE6-9 */
-background:linear-gradient(top, #ddd 10%,#fff 100%); /* W3C */ }
+background:-moz-linear-gradient(top, #e0e0e0 0%, #fff 40%);
+background:-webkit-linear-gradient(top, #e0e0e0 10%,#fff 100%);
+background:linear-gradient(top, #e0e0e0 10%,#fff 100%);}
 input[type="text"]:focus {border:1px solid #dd8888; color:#444; box-shadow:inset 0 0 2px #eed2d2, 2px 2px 4px #ffcccc;}
 
-.fun-picker {position:absolute; display:none; z-index:999999; background:#fff; border-radius:8px; box-shadow:2px 2px 10px #666;}
-.fun-picker ul {}
-.fun-picker ul li {float:left; display:block; padding:3px;}
-.fun-picker ul li:hover {cursor:pointer;}
+.fun-picker {position:absolute; z-index:999999; background:#fff; border-radius:12px; box-shadow:2px 2px 10px #666;}
+.fun-picker ul {border:1px solid #999; box-shadow:1px 1px 3px #ccc; border-radius:6px; float:left; margin:8px; padding:0; overflow:hidden; max-width:150px; border-right:0 none; border-bottom:0 none;}
+.fun-picker ul li {float:left; display:block; padding:3px; border-right:1px solid #999; border-left:1px solid #fff; width:17px; height:17px; text-shadow:-1px -1px 1px #666, 1px 1px 1px #fff; text-align:center; border-bottom:1px solid #aaa;
+background: -moz-linear-gradient(top, #eee 0%, #fff 18%, #ddd 100%);
+background: -webkit-linear-gradient(top, #eee 0%,#fff 18%,#ddd 100%);
+background: linear-gradient(top, #eee 0%,#fff 18%,#ddd 100%);
+}
+.fun-picker ul li:hover {cursor:pointer; text-shadow:0 0 0 transparent; border-left:1px solid #dd4242; border-top:1px solid #FFA2A2; padding-top:2px; color:#fff;
+background: -moz-linear-gradient(top, #dd4242 0%, #aa2222 100%);
+background: -webkit-linear-gradient(top, #dd4242 0%,#aa2222 100%);
+background: linear-gradient(top, #dd4242 0%,#aa2222 100%);
+}
