--- a/builder.css
+++ b/builder.css
@@ -95,8 +95,6 @@ box-shadow:1px 1px 0 #ae350e,
 1px 2px 0 #ae350e;
 -webkit-transition:all 0.12s ease-out;
 -moz-transition:all 0.12s ease-out;
--o-transition:all 0.12s ease-out;
--ms-transition:all 0.12s ease-out;
 transition:all 0.12s ease-out;}
 ul.nav li a:hover {text-decoration:none; border:0 none; top:0; left:0; padding-bottom:5px;
 box-shadow:1px 1px 0 #ce553e,
@@ -144,10 +142,15 @@ box-shadow:1px 1px 0 #ce553e,
 .config {float:left; width:200px; padding:0 10px 10px;}
 .options {border-left:13px solid #eee; overflow:auto; clear:both; padding:0 0 0 10px; margin:10px 0 0 1px;}
 .options .group {padding:2px 0; margin:4px 0 0; float:left; clear:both;}
-#wtf {margin-left:10px;}
 .group label {cursor:pointer; color:#444; padding:0 0 0 2px;}
 .group label:hover {color:#000;}
+.config.characters {width:250px;}
+.config.characters input {font-family:monospace; float:left; width:25px; text-align:center;}
+.config.characters label {margin-left:1px; display:block; float:left; padding:8px 10px 4px; }
+.config.characters .group {clear:both; float:left; margin:0 0 10px;}
+.fun-picker ul li {font-family:monospace;}
 
+#wtf {margin-left:10px;}
 .wtf {clear:both; margin:10px; border:3px solid #ddd; height:34px; padding:10px; font-size:10pt; box-shadow:inset 0 0 10px #eee; margin:0 0 20px;}
 .wtf label {display:block; font-style:italic; color:#aaa; display:none; font-size:11pt; margin:0 0 3px;}
 .wtf #placeholder {display:block; margin:10px auto 0; width:400px; color:#888; text-transform:uppercase;}
