--- a/FunForms.css
+++ b/FunForms.css
@@ -1,4 +1,4 @@
-.fun-checkbox {display:inline-block; width:12px; height:12px; border:1px solid #9e9fa1; border-bottom:1px solid #888; border-top:1px solid #bbb; border-radius:3px; box-shadow:2px 2px 2px #ddd, inset 0 0 2px #686c77; cursor:pointer;
+.fun-checkbox {display:inline-block; width:12px; height:12px; border:1px solid #9e9fa1; border-bottom:1px solid #888; border-top:1px solid #bbb; border-radius:3px; -webkit-box-shadow:2px 2px 2px #ddd, inset 0 0 2px #686c77box-shadow:2px 2px 2px #ddd, inset 0 0 2px #686c77; cursor:pointer;
 background:-moz-linear-gradient(top, #bbc0ca 0%, #d2d5dc 100%);
 background:-webkit-linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%);
 background:linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%);}
@@ -8,16 +8,17 @@ background:linear-gradient(top, #bbc0ca 0%,#d2d5dc 100%);}
 .fun-checkbox.checked {position:relative;
 background:-webkit-radial-gradient(circle, #feddd7, #fec3cd);
 background:-moz-radial-gradient(circle, #feddd7, #fec3cd);
+-webkit-box-shadow:0 0 5px #FFA2A2, 1px 1px 2px #daaac3, inset 0 0 2px red;
 box-shadow:0 0 5px #FFA2A2, 1px 1px 2px #daaac3, inset 0 0 2px red; }
 
-input[type="text"] {border:1px solid #aaa; padding:4px; font-family:serif; font-size:12pt; color:#666; box-shadow:2px 2px 3px #ccc;
+input[type="text"] {border:1px solid #aaa; padding:4px; font-family:serif; font-size:12pt; color:#666; -webkit-box-shadow:2px 2px 3px #ccc; box-shadow:2px 2px 3px #ccc;
 background:-moz-linear-gradient(top, #e0e0e0 0%, #fff 40%);
 background:-webkit-linear-gradient(top, #e0e0e0 10%,#fff 100%);
 background:linear-gradient(top, #e0e0e0 10%,#fff 100%);}
-input[type="text"]:focus {border:1px solid #dd8888; color:#444; box-shadow:inset 0 0 2px #eed2d2, 2px 2px 4px #ffcccc;}
+input[type="text"]:focus {border:1px solid #dd8888; color:#444; -webkit-box-shadow:inset 0 0 2px #eed2d2, 2px 2px 4px #ffcccc; box-shadow:inset 0 0 2px #eed2d2, 2px 2px 4px #ffcccc;}
 
-.fun-picker {position:absolute; z-index:999999; background:#fff; border-radius:12px; box-shadow:2px 2px 10px #666; display:none;}
-.fun-picker ul {border:1px solid #999; box-shadow:1px 1px 3px #ccc; border-radius:6px; float:left; margin:8px; padding:0; overflow:hidden; max-width:150px; border-right:0 none; border-bottom:0 none;}
+.fun-picker {position:absolute; z-index:999999; background:#fff; border-radius:12px; -webkit-box-shadow:2px 2px 10px #666; box-shadow:2px 2px 10px #666; display:none;}
+.fun-picker ul {border:1px solid #999; -webkit-box-shadow:1px 1px 3px #ccc; box-shadow:1px 1px 3px #ccc; border-radius:6px; float:left; margin:8px; padding:0; overflow:hidden; max-width:150px; border-right:0 none; border-bottom:0 none;}
 .fun-picker ul li {float:left; display:block; padding:3px; border-right:1px solid #999; border-left:1px solid #fff; width:17px; height:17px; text-shadow:-1px -1px 1px #666, 1px 1px 1px #fff; text-align:center; border-bottom:1px solid #aaa;
 background:-moz-linear-gradient(top, #eee 0%, #fff 18%, #ddd 100%);
 background:-webkit-linear-gradient(top, #eee 0%,#fff 18%,#ddd 100%);
