--- a/builder.css
+++ b/builder.css
@@ -11,6 +11,12 @@ section {background:#fff; padding:35px 20px 20px; border-radius:8px; margin:0 0 
 -webkit-transition:all 0.4s ease-out;
 -moz-transition:all 0.4s ease-out;
 transition:all 0.4s ease-out; 
+-webkit-box-shadow:1px 1px 0 #777,
+2px 2px 0 #999,
+3px 3px 0 #9a9a9a,
+4px 4px 0 #aaa,
+5px 5px 0 #a9a9a9,
+5px 5px 10px #000;
 box-shadow:1px 1px 0 #777,
 2px 2px 0 #999,
 3px 3px 0 #9a9a9a,
@@ -23,6 +29,12 @@ footer {background:#D4EE5E; border-radius:5px; padding:28px 30px 32px 30px; colo
 text-shadow:1px 1px 0 #646E06,
 2px 2px 0 #545E00,
 2px 2px 5px #000;
+-webkit-box-shadow:inset 2px 2px 8px #647E0E,
+-1px -1px 0 #848E0E,
+-2px -2px 0 #949E1E,
+-3px -3px 0 #A4AE2E,
+-4px -4px 0 #B4BE3E,
+-5px -5px 0 #C4CE4E;
 box-shadow:inset 2px 2px 8px #647E0E,
 -1px -1px 0 #848E0E,
 -2px -2px 0 #949E1E,
@@ -83,6 +95,12 @@ text-shadow:1px 1px 0 #546E6E,
 ul.nav {padding:15px 0 0 10px; margin:0; height:30px; font-size:10pt;}
 ul.nav li {float:left; list-style:none;}
 ul.nav li:first-child {font-weight:bold; text-shadow:-1px -1px 0 #ae351e; border-radius:20px 0 0 20px; padding:6px 10px 4px 15px; background:#FF4242; color:#fff;
+-webkit-box-shadow:1px 1px 0 #881017,
+2px 2px 0 #881017,
+3px 3px 0 #801017,
+4px 4px 0 #781017,
+5px 5px 0 #701017,
+5px 5px 10px #111;
 box-shadow:1px 1px 0 #881017,
 2px 2px 0 #881017,
 3px 3px 0 #801017,
@@ -91,12 +109,21 @@ box-shadow:1px 1px 0 #881017,
 5px 5px 10px #111;}
 ul.nav li:last-child a {border-radius:0 20px 20px 0; padding-right:15px;}
 ul.nav li a {position:relative; top:2px; left:2px; letter-spacing:0.05em; float:left; list-style:none; margin:0 1px 0 0; background:#fff; display:block; padding:5px 20px 2px; border-bottom:3px solid #ddd; text-decoration:none;
+-webkit-box-shadow:1px 1px 0 #ae350e,
+1px 2px 0 #ae350e;
 box-shadow:1px 1px 0 #ae350e,
 1px 2px 0 #ae350e;
 -webkit-transition:all 0.12s ease-out;
 -moz-transition:all 0.12s ease-out;
 transition:all 0.12s ease-out;}
 ul.nav li a:hover {text-decoration:none; border:0 none; top:0; left:0; padding-bottom:5px;
+-webkit-box-shadow:1px 1px 0 #ce553e,
+0px 0px 2px #444,
+2px 2px 0 #ce553e,
+3px 3px 0 #ce553e,
+4px 4px 0 #ce553e,
+5px 5px 0 #ce553e,
+10px 5px 7px #000;
 box-shadow:1px 1px 0 #ce553e,
 0px 0px 2px #444,
 2px 2px 0 #ce553e,
@@ -106,6 +133,12 @@ box-shadow:1px 1px 0 #ce553e,
 10px 5px 7px #000;}
 
 ul.nav li a:active {top:1px; left:1px;
+-webki-box-shadow:1px 1px 0 #ce553e,
+0px 0px 2px #444,
+2px 2px 0 #ce553e,
+3px 3px 0 #ce553e,
+4px 4px 0 #ce553e,
+10px 5px 7px #000;
 box-shadow:1px 1px 0 #ce553e,
 0px 0px 2px #444,
 2px 2px 0 #ce553e,
@@ -129,7 +162,7 @@ box-shadow:1px 1px 0 #ce553e,
 /* Preview output */
 .display {font-family:monospace;}
 .display label {color:#444; font-family:sans-serif; margin:5px 0 5px; display:block; float:left; width:100px;}
-#git-display, #hg-display, #svn-display {background:#222; padding:3px; color:#fff; float:left; width:800px; border-radius:4px; line-height:16pt; box-shadow:3px 3px 9px #000 inset; text-shadow:1px 1px 3px #000;}
+#git-display, #hg-display, #svn-display {background:#222; padding:3px; color:#fff; float:left; width:800px; border-radius:4px; line-height:16pt; box-shadow:3px 3px 9px #000 inset; -webkit-box-shadow:3px 3px 9px #000 inset text-shadow:1px 1px 3px #000;}
 
 .display .group {clear:both; margin:0 0 4px; float:left;}
 .display .group:last-child {border:0 none;}
@@ -153,7 +186,7 @@ box-shadow:1px 1px 0 #ce553e,
 .fun-picker ul li {font-family:monospace;}
 
 #wtf {margin-left:10px;}
-.wtf {clear:both; margin:10px; border:3px solid #ddd; height:34px; padding:10px; font-size:10pt; box-shadow:inset 0 0 10px #eee; margin:0 0 20px;}
+.wtf {clear:both; margin:10px; border:3px solid #ddd; height:34px; padding:10px; font-size:10pt; -webkit-box-shadow:inset 0 0 10px #eee; box-shadow:inset 0 0 10px #eee; margin:0 0 20px;}
 .wtf label {display:block; font-style:italic; color:#aaa; display:none; font-size:11pt; margin:0 0 3px;}
 .wtf #placeholder {display:block; margin:10px auto 0; width:400px; color:#888; text-transform:uppercase;}
 
@@ -161,6 +194,7 @@ box-shadow:1px 1px 0 #ce553e,
 #dock {display:none; position:absolute; font-size:8pt !important; right:20px; bottom:10px; padding:2px 20px;}
 button {font-size:10pt; margin:5px 0 0;}
 button span {font-size:23pt; line-height:2pt; position:relative; top:7px;}
+.webkit button span {font-size:13pt; top:2px;}
 
 .floated {position:fixed; border-radius:0; width:100%; bottom:0; left:0; box-shadow:0 0 transparent; z-index:9999; padding:5px; font-size:9pt; margin:0; border-top:1px solid #888; box-shadow:0 0 8px #666; background:#ddd;}
 .floated .wtf {display:none;}
